left slide + wave animation

--- a/index.html
+++ b/index.html
@@ -55,7 +55,21 @@
                 </div>
             </div>
             <div id="leftSide">
-
+                <!-- <div id="logo">
+                    <img src="./Assets/PNG/Logo.png" alt="">
+                    
+                </div> -->
+                <div class="wave-div"></div>
+                <div id="wave2" class="wave-div"></div>
+                <div id="wave3" class="wave-div"></div>
+                <div id="wave4" class="wave-div"></div>
+                <div id="wave5" class="wave-div"></div>
+                <div class="logo">
+                    <img id="logo-img" src="./Assets/PNG/Logo.png" alt="logo">
+                </div>
+                <div id="program-name-layout">
+                    <span id="program-name">Multi Anti-Virus & Cybersecurity</span>
+                </div>
             </div>
         </div>
         <!-- <script src="" async defer></script> -->
