--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                 <div id="program-name-layout">
                     <span id="program-name">Multi Anti-Virus & Cybersecurity</span>
                 </div>
+                <div class="beam"></div>
             </div>
         </div>
         <!-- <script src="" async defer></script> -->
